Fix: Full Screen - overlap at `browser.fullscreen.autohide`
from https://github.com/black7375/Firefox-UI-Fix/commit/8c5d04014cd2814b0a1d7a6fa275442125e0b31f

--- a/userChrome.css
+++ b/userChrome.css
@@ -3864,7 +3864,7 @@ tab[visuallyselected] > stack::after {
 }
 
 /** Fullscreen - Overlap toolbar **********************************************/
-@supports not -moz-bool-pref("layout.css.osx-font-smoothing.enabled") {
+@supports -moz-bool-pref("browser.fullscreen.autohide") {
   :root[sizemode="fullscreen"] #navigator-toolbox {
     position: fixed !important; /* Needed for content to take up entire height */
     display: block !important; /* Needed for content to take up entire height */
